# study-opengl-cpp

./: .gitignore  CMakeLists.txt  Makefile  build_and_run.sh  camera.h  main.cpp  shader_s.h  todolist.md  vertex.glsl
include/glad/: glad.h
src/: camera.h  main.cpp
src/camera/: camera.cpp  camera.h
src/chunk/: chunk.cpp  chunk.h
src/shader/: shader.cpp  shader.h
